--- a/src/components/Boxes/box.module.css
+++ b/src/components/Boxes/box.module.css
@@ -5,27 +5,134 @@
     background-color: black;
     color : #fff;
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     border : 1px solid #000;
     text-align: center;
 
+    
+    h3, h5 {
+        margin : 0
+    }
+
+   
+
+    input {
+
+        text-align: center;
+        background-color: transparent;
+        border: 0;
+        width: 100%;
+        
+        &[type=range] {
+            
+            /* -webkit-appearance: none;  */
+            width: 80%; 
+            background: transparent;
+
+        }
+        
+
+        &:focus-visible {
+
+            outline: none;
+            border: 1px solid #fff;
+            color: #000;
+            background-color: #fff;
+
+        }
+
+      
+    }
+
+    .remove {
+        position: absolute;
+        right : 0;
+        top : 0;
+        font-size: 14px;
+    }
+
+    .actions {
+
+        margin: 10px 0 0 0;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+
+    }
+
+    &.compact {
+        
+        border-radius: 100%;
+        display: flex;
+        flex-direction: column;
+
+        h4 {
+            margin: 0;
+        }
+    }
+
     &.green {
+
         background-color: green;
+
+        input {
+            color : #FFF;
+            background-color: green;
+            border-color: green;
+        }
+
     }
 
     &.red {
+
         background-color: red;
+
+        input {
+
+            color : #FFF;
+            background-color: red;
+            border-color: red;
+
+        }
     }
 
     &.white {
+
         background-color: #fff;
         color : #000;
+
+        input {
+            color : #000;
+        }
+    }
+
+    &.blue {
+        background-color: blue;
+
+        input {
+
+            color : #fff;
+            background-color: blue;
+            border-color: blue;
+
+        }
+        
     }
 
     &.purple {
+
         background-color: #fff;
-        color : maroon
+        color : maroon;
+
+        input {
+
+            color : #fff;
+            background-color: blue;
+            border-color: blue;
+
+        }
     }
 
 }
